add:momgo+mysql

--- a/src/main/resources/filters/dev.properties
+++ b/src/main/resources/filters/dev.properties
@@ -5,6 +5,7 @@ ipJmsSwitch=true
 jms.brokerurl=tcp://localhost:61616
 log_dir_root=logs
 
+jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/movielib
 jdbc.username=wangjihui
 jdbc.password=123456
