--- a/src/main/resources/filters/test.properties
+++ b/src/main/resources/filters/test.properties
@@ -4,6 +4,7 @@ ftl_pub_path=src/ftl/
 ftl_mobile_pub_path=src/ftl_mobile/
 log_dir_root=logs
 
+jdbc.driver=${jdbc.driver}
 jdbc.url=jdbc:mysql://localhost:3306/movielib
 jdbc.username=wangjihui
 jdbc.password=123456
