--- a/src/main/resources/filters/dev.properties
+++ b/src/main/resources/filters/dev.properties
@@ -6,10 +6,10 @@ jms.brokerurl=tcp://localhost:61616
 log_dir_root=logs
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/movielib
+jdbc.url=jdbc:mysql://localhost:3306/solar
 jdbc.username=wangjihui
 jdbc.password=123456
 
-mongo.url=mongodb://study7910:123456@localhost:27017/?maxPoolSize=40
+mongo.url=mongodb://wangjihui:123456@localhost:27127/?maxPoolSize=40
 memcached_address_list=localhost:11211
 zookeeperConnectStr=localhost:2181
