--- a/src/main/resources/filters/prod.properties
+++ b/src/main/resources/filters/prod.properties
@@ -1,14 +1,15 @@
-ipJmsSwitch=true
-jms.brokerurl=tcp://127.0.0.1:61616
 ftl_pub_path=src/ftl/
 ftl_mobile_pub_path=src/ftl_mobile/
+
+ipJmsSwitch=true
+jms.brokerurl=tcp://localhost:61616
 log_dir_root=logs
 
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/movielib
+jdbc.url=jdbc:mysql://localhost:3306/solar
 jdbc.username=wangjihui
 jdbc.password=123456
 
-mongo.url=mongodb://study7910:123456@localhost:27017/?maxPoolSize=40
+mongo.url=mongodb://wangjihui:123456@localhost:27127/?maxPoolSize=40
 memcached_address_list=localhost:11211
 zookeeperConnectStr=localhost:2181
