add:database test

--- a/src/main/resources/filters/dev.properties
+++ b/src/main/resources/filters/dev.properties
@@ -7,8 +7,8 @@ log_dir_root=logs
 
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/solar
-jdbc.username=wangjihui
-jdbc.password=123456
+jdbc.username=wjh
+jdbc.password=271314
 
 mongo.url=mongodb://wangjihui:123456@localhost:27017/?maxPoolSize=40
 memcached_address_list=localhost:11211
