--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 			<scope>test</scope>
 		</dependency>
 
+        <!-- 如果是tomcat7及其以上版本，自带websocket,引入会导致冲突,设置scope为provided-->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
@@ -33,10 +40,10 @@
 			<version>1.0.0.GA</version>
 		</dependency>
 		<dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator-annotation-processor</artifactId>
-            <version>4.1.0.Final</version>
-        </dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<version>4.1.0.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -251,16 +258,10 @@
 			<version>1.8.0.10</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator-annotation-processor</artifactId>
-			<version>4.1.0.Final</version>
-		</dependency>
-		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.8</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -275,7 +276,7 @@
 					<target>1.6</target>
 					<encoding>UTF-8</encoding>
 					<compilerArguments>
-						<arg>${project.basedir}/src/main/webapp/WEB-INF/lib</arg>
+						<extdirs>${project.basedir}/src/main/webapp/WEB-INF/lib</extdirs>
 					</compilerArguments>
 				</configuration>
 			</plugin>
