--- a/src/main/resources/filters/test.properties
+++ b/src/main/resources/filters/test.properties
@@ -12,4 +12,9 @@ jdbc.password=123456
 
 mongo.url=mongodb://wangjihui:123456@localhost:27017/?maxPoolSize=40
 memcached_address_list=localhost:11211
-zookeeperConnectStr=localhost:2181
+
+zookeeperShareNamespace=solar-share
+zookeeperPrivateNamespace=solar-private
+zookeeperConnectStr=localhost:2181,localhost:2182,localhost:2183
+zookeeperSessionTimeout=60000
+zookeeperLockEnv=solar-test
