--- a/src/main/resources/properties/config.properties
+++ b/src/main/resources/properties/config.properties
@@ -2,3 +2,9 @@ log_dir_root=${log_dir_root}
 
 ipJmsSwitch=${ipJmsSwitch}
 jms.brokerurl=${jms.brokerurl}
+
+zookeeperShareNamespace=${zookeeperShareNamespace}
+zookeeperPrivateNamespace=${zookeeperPrivateNamespace}
+zookeeperConnectStr=${zookeeperConnectStr}
+zookeeperSessionTimeout=${zookeeperSessionTimeout}
+zookeeperLockEnv=${zookeeperLockEnv}
