--- a/src/main/resources/filters/prod.properties
+++ b/src/main/resources/filters/prod.properties
@@ -3,7 +3,7 @@ ftl_mobile_pub_path=src/ftl_mobile/
 
 ipJmsSwitch=true
 jms.brokerurl=tcp://localhost:61616
-log_dir_root=logs
+log_dir_root=/home/wangjihui/logs
 
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/solar
