--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -6,3 +6,10 @@ jdbc.password=${jdbc.password}
 mongo.url=${mongo.url}
 memcached_address_list=${memcached_address_list}
 zookeeperConnectStr=${zookeeperConnectStr}
+
+redis.sentinel.hosts=127.0.0.1:6379
+#redis.masterName=mymaster
+redis.maxTotal=50
+redis.maxIdle=5
+redis.maxWaitMillis=6000
+redis.testOnBorrow=true
