--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
 			<artifactId>spring-ibatis</artifactId>
 			<version>2.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.ibatis</groupId>
+			<artifactId>ibatis-sqlmap</artifactId>
+			<version>2.3.4.726</version>
+		</dependency>
 		<!-- apache commons -->
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -265,7 +270,7 @@
 		<dependency>
 			<groupId>org.compass-project</groupId>
 			<artifactId>compass</artifactId>
-			<version>2.2.0</version>
+			<version>2.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
