--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,12 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.ibatis</groupId>
+			<artifactId>ibatis-core</artifactId>
+			<version>3.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
