--- a/src/main/resources/filters/test.properties
+++ b/src/main/resources/filters/test.properties
@@ -13,6 +13,16 @@ jdbc.password=123456
 mongo.url=mongodb://wangjihui:123456@localhost:27017/?maxPoolSize=40
 memcached_address_list=localhost:11211
 
+redis.host=localhost
+redis.port=6379
+redis.maxTotal=1000
+redis.maxIdle=10
+redis.minIdle=1
+redis.maxWaitMillis=3000
+redis.testOnBorrow=true
+redis.testOnReturn=true
+redis.testWhileIdle=true
+
 zookeeperShareNamespace=solar-share
 zookeeperPrivateNamespace=solar-private
 zookeeperConnectStr=localhost:2181,localhost:2182,localhost:2183
