--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -5,11 +5,13 @@ jdbc.password=${jdbc.password}
 
 mongo.url=${mongo.url}
 memcached_address_list=${memcached_address_list}
-zookeeperConnectStr=${zookeeperConnectStr}
 
-redis.sentinel.hosts=127.0.0.1:6379
-#redis.masterName=mymaster
-redis.maxTotal=50
-redis.maxIdle=5
-redis.maxWaitMillis=6000
-redis.testOnBorrow=true
+redis.host=${redis.host}
+redis.port=${redis.port}
+redis.maxTotal=${redis.maxTotal}
+redis.maxIdle=${redis.maxIdle}
+redis.minIdle=${redis.minIdle}
+redis.maxWaitMillis=${redis.maxWaitMillis}
+redis.testOnBorrow=${redis.testOnBorrow}
+redis.testOnReturn=${redis.testOnReturn}
+redis.testWhileIdle=${redis.testWhileIdle}
